--- a/frontend/src/features/LandingPage/LandingPage.css
+++ b/frontend/src/features/LandingPage/LandingPage.css
@@ -2,7 +2,7 @@
     width: 75%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-gap: 1rem;
     padding: 1rem;
 }
@@ -25,7 +25,7 @@
         width: 75%;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(1, minmax(0, 1fr));
         grid-gap: 1rem;
         padding: 1rem;
     }
